--- a/css/styles.css
+++ b/css/styles.css
@@ -1818,6 +1818,7 @@ a:hover.back-to-top {
         margin-left: 2.25rem;
     }
     .form-2 .map-responsive {
+        background-image: none;
         max-width: 31rem;
         margin-right: auto;
         margin-left: auto;
